--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -75,7 +75,8 @@ The contributions of this thesis can be summarized as follows;
 	\item The introduction of parallel reality as a new category of alternate reality that allows users to experience two complete environments in tandem and represents an avenue for further mitigation of the vacancy problem.
 	\item The framing of parallel reality through a thorough investigation and extension of previous taxonomies that classify and distinguish between alternate reality terminologies.
 	\item The creation of the combined Milgram/Waterworth model for visualising alternate reality experiences, including those of parallel reality systems.
-	\item Development of a parallel reality platform, dubbed Mirrorshades, that combines new virtual reality hardware with novel indoor positioning technology.
+	\item Development of a preliminary parallel reality platform, the Virtual Time Window, through extension of the Second Life client.
+	\item Development of a second parallel reality platform, dubbed Mirrorshades, that combines new virtual reality hardware with novel indoor positioning technology.
 	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of cultural heritage, including the application of an established presence questionnaire to parallel reality.
 	\item Discussion and creation of a set of best practices for future parallel reality endeavours.
 \end{itemize}
@@ -100,24 +101,6 @@ Chapter \ref{chapter-background} surveys existing methods and taxonomies for cla
 %\subsection{Presence}
 
 %=========================================================================================================
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 %From William Gibson's `The Gernsback Continuum' and beyond through contemporary cyberpunk literature
 
