--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -54,7 +54,7 @@ One of the overbearing concepts introduced by Milgram and Kishino is that whilst
 \begin{figure}[h]
 \centering
 \includegraphics[width=\textwidth]{virtuality_continuum_extent_of_world_knowledge_continuum.png}
-\caption{\textit{Reality-Virtuality continuum} (top), parallel with \textit{Extent of World Knowledge continuum} (bottom).}
+\caption{Milgram and Kishino's reality-virtuality continuum and extent of world knowledge continuum.}
 \label{reality_virtuality_extent_of_world_knowledge_continuum}
 \end{figure}
 
@@ -80,8 +80,8 @@ As such, considering the first case of taking a viewport depicting a real enviro
 
 Another method of illustrating the relationships between different categories of alternate realities was put forward by Roy Want in his introductory article for a 2009 issue of IEEE Pervasive Computing dedicated to the \textit{cross reality} paradigm~\cite{Want2009}. He presents a 2x2 matrix categorising the different terms according to whether the experience and overlay data are real or virtual (figure \ref{Want_virtuality_matrix_original.png}). Whilst this is a useful representation, some of the definitions and criteria depicted do not match with those of Milgram and Kishino or even with those of other authors in the same issue of Pervasive, let alone other publications concerning alternate realities. Figure \ref{Want_virtuality_matrix_modified.png} presents a modified version of this matrix that is in keeping with the framework laid out by Milgram and Kishino and the wider literature.
 
-\TwoFig{Want_virtuality_matrix_original.png} {Want's original virtuality matrix.} {Want_virtuality_matrix_original.png}
-       {Want_virtuality_matrix_modified.png} {Modified Want matrix.} {Want_virtuality_matrix_modified.png}
+\TwoFig{Want_virtuality_matrix_original.png} {Want's virtuality matrix.} {Want_virtuality_matrix_original.png}
+       {Want_virtuality_matrix_modified.png} {Want's virtuality matrix after modification.} {Want_virtuality_matrix_modified.png}
 
 Where the original matrix positions cross reality in the upper left quadrant, at the congruence of `experience virtual' and `overlay data real', the modified matrix positions augmented virtuality. Referencing Milgram's continuum, `experience virtual' relates to a position somewhere within the right half, while `overlay data real' relates to presentation over this necessarily virtual environment of sampled real world data, resulting in a partially modelled environment, leaving us in the area of the continuum occupied by augmented virtuality.
 
@@ -99,13 +99,13 @@ Steve Mann, the \textit{``father of wearable computing''}~\cite{Schofield2012} a
 
 Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reality at a subset of mixed reality, but then further places virtual reality at a subset of augmented reality and in turn mixed reality. A modified version of this diagram (figure \ref{Mann_venn_mod_1.png}) removes virtual reality from this position, as although virtual reality is by definition mediated, it is not necessarily always presented as part of an augmented or mixed reality, as purely virtual environments can and do exist - Mann himself states that \textit{``mixed reality exists in many forms along a continuum from augmented reality \ldots\ to more recent efforts at augmented virtuality''}, which is contrary to the diagram's representation of virtual reality as necessarily a subset of augmented reality and in turn of mixed reality. Furthermore the modified diagram introduces augmented virtuality, mentioned by Mann in his prose but not included in the original diagram. An overlap is also introduced between those modulated reality environments that are also classified as mixed reality, as it is perplexing to think of a mixed reality environment that is neither augmented reality nor augmented virtuality (at least when considering a wholly real environment and a wholly virtual environment as the logically possible extremes, as in Milgram and Kishino's continuum).
 
-\TwoFig{Mann_venn_original.png} {Original Mann Venn diagram.} {Mann_venn_original.png}
-       {Mann_venn_mod_1.png} {Modified Mann Venn diagram.} {Mann_venn_mod_1.png}
+\TwoFig{Mann_venn_original.png} {Mann's Venn diagram of alternate realities.} {Mann_venn_original.png}
+       {Mann_venn_mod_1.png} {Mann's Venn diagram of alternate realities after modification.} {Mann_venn_mod_1.png}
 
 \begin{figure}[h]
 \centering
   \includegraphics[width=0.5\linewidth]{Mann_venn_mod_3.png}
-  \caption{Further modified Mann Venn diagram.}
+  \caption{Mann's Venn diagram of alternate realities after further modification.}
   \label{Mann_venn_mod_3.png}
 \end{figure}
 
@@ -182,6 +182,12 @@ Augmented Reality (AR) & A mixed reality environment comprising a real environme
 	%A commercial example of \textit{augmented reality} is the Layar browser for mobile phones, which overlays various forms of data onto the view captured by a phone's camera after determining its location and orientation using GPS, accelerometer and magnetometer readings~\cite{eishita:layar}
 
 %~\cite{Milgram1999}
+
+\midrule
+
+%=========================================================================================================
+
+Diminished Reality & Where augmented reality is concerned with adding virtual objects to a view of the real world, diminished reality is concerned with the removal or replacement of objects from a view of the real world~\cite{Mann2002}. Examples include the removal of real world advertisements (such as billboards). \\
 
 \midrule
 
@@ -342,14 +348,14 @@ The diagram Lifton presents (figure \ref{original_lifton_axis.png}) alludes to M
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=.8\textwidth]{Lifton_continuum_original.png}
-	\caption{The \textit{``virtual worlds taxonomy as viewed on the real-virtual axis''} presented by Lifton.}
+	\caption{Lifton's virtual worlds taxonomy.}
 	\label{original_lifton_axis.png}
 \end{figure}
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=.8\textwidth]{Lifton_continuum_modified.png}
-	\caption{Lifton's taxonomy as modified by this review.}
+	\caption{Lifton's virtual worlds taxonomy after modification.}
 	\label{modified_lifton_axis.png}
 \end{figure}
 
@@ -358,7 +364,7 @@ Lifton does however explain that while such a taxonomy can be successfully appli
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=.6\textwidth]{reality_virtual_reality_sensor_networks.png}
-	\caption{Sensor/actuator infrastructure merging a real and a virtual environment, creating XR.}
+	\caption{Sensor/actuator infrastructure merging real and virtual environments into an instance of XR.}
 	\label{reality_virtual_reality_sensor_networks.png}
 \end{figure}
 
@@ -398,7 +404,7 @@ A further distinction between AR and XR is made by considering Steed's primary e
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=\textwidth]{virtuality-continuum-augmented-reality.png}
-		\caption{AR visualised using the virtuality continuum.}
+		\caption{AR visualised using Milgram \& Kishino's reality-virtuality continuum.}
 		\label{virtuality-continuum-augmented-reality}
 	\end{center}
 \end{figure}
@@ -406,7 +412,7 @@ A further distinction between AR and XR is made by considering Steed's primary e
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=\textwidth]{virtuality-continuum-cross-reality-1.png}
-		\caption{The two environments that comprise a XR system.}
+		\caption{The two environments that comprise a XR system visualised using Milgram \& Kishino's reality-virtuality continuum.}
 		\label{virtuality-continuum-cross-reality-1}
 	\end{center}
 \end{figure}
@@ -414,7 +420,7 @@ A further distinction between AR and XR is made by considering Steed's primary e
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=\textwidth]{virtuality-continuum-cross-reality-2.png}
-		\caption{A XR system with the user attending to RW stimuli.}
+		\caption{A XR system with the user attending to RW stimuli, visualised using Milgram \& Kishino's reality-virtuality continuum.}
 		\label{virtuality-continuum-cross-reality-2}
 	\end{center}
 \end{figure}
@@ -422,7 +428,7 @@ A further distinction between AR and XR is made by considering Steed's primary e
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=\textwidth]{virtuality-continuum-cross-reality-3.png}
-		\caption{A XR system with the user attending to VR stimuli.}
+		\caption{A XR system with the user attending to VR stimuli, visualised using Milgram \& Kishino's reality-virtuality continuum.}
 		\label{virtuality-continuum-cross-reality-3}
 	\end{center}
 \end{figure}
@@ -438,7 +444,7 @@ The discussion in the previous section highlighted that the first distinguishing
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=\textwidth]{virtuality-continuum-cross-reality-information-flows-dashed.png}
-		\caption{The two environments that comprise a XR system, plus the bidirectional information flow between them.}
+		\caption{The two environments that comprise a XR system, plus the bidirectional information flow between them, visualised using Milgram \& Kishino's reality-virtuality continuum.}
 		\label{virtuality-continuum-cross-reality-information-flows-dashed.png}
 	\end{center}
 \end{figure}
@@ -571,21 +577,23 @@ This notion of the sense of presence depending upon multiple factors is explored
 
 In this model, the notion of \textit{involvement} relates closely to the \textit{focus of attention} axis; heightened involvement pertains to concentrating on environmental stimuli or meaningfully related activities and events, while heightened focus pertains to increased perceptual/concrete processing; lessened involvement pertains to a preoccupation with personal problems or activities occurring outwith the environment of interest, while lessened focus pertains to increased conceptual/abstract reasoning.
 
-Similarly, a relationship can be drawn between this model and Milgram and Kishino's virtuality continuum, with the latter considered here to be analogous to the \textit{locus of attention} axis; the combination of these models is shown by figure \ref{focus-locus-sensus-with-virtuality-continuum}.
+Similarly, a relationship can be drawn between this model and Milgram and Kishino's virtuality continuum, with the latter considered here to be analogous to the \textit{locus of attention} axis. The combination of these two models in this manner gives rise to the combined Milgram/Waterworth model which is shown by figure \ref{focus-locus-sensus-with-virtuality-continuum} and allows for a novel method of visualising the experience of using a parallel reality system.
 
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=.8\textwidth]{focus-locus-sensus-with-virtuality-continuum-updated-with-grid.png}
-		\caption{The combined virtuality continuum/three dimensions of virtual experience model.}
+		\caption{The combined Milgram/Waterworth model.}
 		\label{focus-locus-sensus-with-virtuality-continuum}
 	\end{center}	
 \end{figure}
 
-Regarding this combined Milgram/Waterworth model we see more clearly that the balance between presence and absence relates to any environment upon the locus of attention axis, as confirmed by Waterworth and Waterworth in a subsequent publication;
+Regarding the combined Milgram/Waterworth model shows more clearly that the balance between presence and absence relates to any environment upon the locus of attention axis, as confirmed by Waterworth and Waterworth in a subsequent publication;
 
 \begin{quote}
 	\textit{``We may feel hardly present at all in the physical world (a state we call absence) if nothing is happening there that is of interest or that impacts on our well-being, and so it is with mediated presence.''}~\cite{Waterworth2014}
 \end{quote}
+
+Furthermore, one might postulate as to the essence of vacancy
 
 %The Sensus Dimension - the importance of being awake in class
 %"Even as we sleep dreamlessly..." (example of being 'unconscious' in this regard)
@@ -630,7 +638,7 @@ Sensus is expected to be largely task dependent, however when performing a task 
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=.8\textwidth]{transition-rw-vr.png}
-		\caption{Operation of a PR system represented upon the combined Milgram/Waterworth model.}
+		\caption{Visualisation using the combined Milgram/Waterworth model of the theorised experience of a user of a PR system performing a slow transition between its constituent RW and VR environments.}
 		\label{focus-locus-sensus-with-virtuality-continuum-with-transition}
 	\end{center}	
 \end{figure}
