--- a/05_mirrorshades_design_implementation/experimental_plan.tex
+++ b/05_mirrorshades_design_implementation/experimental_plan.tex
@@ -135,7 +135,7 @@ Thus, such a XR platform is well suited to situations in which interaction with 
 \begin{itemize}
 	\item in lieu of accurate registration between real \& virtual, there is a strong focus on the virtual environment's atmosphere \& immersion~\cite{deamicis:gamebased};
 	\item there is existing VR content;
-	\item the visual differences between real \& virtual environments are so substantial that an AR system would resort to augment (\&/or diminish~\cite{Mann2002}) almost the whole RW view. While AR \textit{``smears an informational coating over real space''}~\cite{Andersen}, XR presents a complete, discrete virtual environment. AR is beneficial where one wishes the juxtaposition of virtual objects upon what is already present in the RW environment, however VR is better suited to situations where one wishes to present a complete virtual alternative.
+	\item the visual differences between real \& virtual environments are so substantial that an AR system would resort to augment (\&/or diminish) almost the whole RW view. While AR \textit{``smears an informational coating over real space''}~\cite{Andersen}, XR presents a complete, discrete virtual environment. AR is beneficial where one wishes the juxtaposition of virtual objects upon what is already present in the RW environment, however VR is better suited to situations where one wishes to present a complete virtual alternative.
 \end{itemize}
 
 \section{Example Application - Cultural Heritage}
