--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -28,7 +28,7 @@ Participants were sourced by adverts disseminated via an internal university mem
 \begin{figure}[ht]
 	\begin{center}
 		\includegraphics[width=\linewidth]{participant-f.jpg}
-		\caption{Participant using Mirrorshades in a user study at St Salvator's chapel.}
+		\caption{Participant using Mirrorshades in user studies at St Salvator's chapel.}
 		\label{participant-f.jpg}
 	\end{center}
 \end{figure}
@@ -59,7 +59,7 @@ The scenarios were intended to mimic the style of exploration and interaction th
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=.6\linewidth]{chapel-path.png}
-		\caption{The path and positions within the chapel that participants are instructed to attend to.}
+		\caption{Path and positions within St Salvator's chapel that participants weere instructed to follow and attend to.}
 		\label{chapel-path}
 	\end{center}
 \end{figure}
@@ -156,8 +156,8 @@ A total of 6 participants completed the stage 1 investigation;
 \subsection{SUS}
 As expected, the PR scenario scored slightly lower on SUS than the traditional VR scenario (see figure \ref{sus.png}). The cumbersome nature of the hardware was expected to have this impact upon SUS scores, with the PR scenario averaging lower than the traditional VR scenario. Participants who were able to overcome this cumbersomeness were expected to respond more favourably to the PR scenario than those who could not and the small size of the discrepancy between the two results indicates that most participants did not find the cumbersome nature of the PR scenario a substantial detractor from their experience.
 
-\TwoFig{1/sus.png}{SUS results for stage 1.}{sus.png}
-       {1/post_task_questionnaire_boxplot.png}{Likert-type questionnaire results.}{post_task_questionnaire_boxplot.png}
+\TwoFig{1/sus.png}{Stage 1 evaluation SUS results.}{sus.png}
+       {1/post_task_questionnaire_boxplot.png}{Stage 1 evaluation Likert-type questionnaire results.}{post_task_questionnaire_boxplot.png}
 
 %=========================================================================================================
 
@@ -420,8 +420,6 @@ Furthermore, comparing yaw from the VR periods of the PR scenario (table \ref{sd
 
 Further comparing head movements between the VR section of the traditional VR scenario and the VR periods of the PR scenario, the difference between the magnitude of pitch and yaw is greater in the VR section of the traditional VR scenario than in the VR periods of the PR scenario. Comparing these values from tables \ref{sdpitchyawtrad}, \ref{sdpitchyawpr} and \ref{sdpitchyawtrad} this difference exhibits as smaller variance in yaw and roughly unchanged (only slight increased) variance in pitch for the VR periods of the PR scenario, further indicating that participants were more comfortable to look around themselves more freely in the traditional VR scenario than the PR scenario, leading to less overall head movement in the PR scenario than the traditional VR scenario.
 
-\textbf{***Add table showing these time period data.}
-
 %=========================================================================================================
 
 \section{Summary}
@@ -466,7 +464,7 @@ While stage 1 of the evaluation investigated the suitability of applying a mobil
 \begin{figure}[ht]
 	\begin{center}
 		\includegraphics[width=\linewidth]{participant-m.jpg}
-		\caption{Participant using Mirrorshades in a user study at St Salvator's chapel.}
+		\caption{Participant using Mirrorshades in user studies at St Salvator's chapel.}
 		\label{participant-m.jpg}
 	\end{center}
 \end{figure}
@@ -556,7 +554,7 @@ A total of 7 participants completed the stage 2.1 evaluation;
 \begin{figure}[h]
 	\begin{center}
 	\includegraphics[width=.6\textwidth]{2.1/12-item-likert-type-questionnaire-boxplot.png}
-	\caption{Likert-type questionnaire results for stage 2.1.}
+	\caption{Stage 2.1 evaluation Likert-type questionnaire results.}
 	\label{2-1-12-item-likert-type-questionnaire-boxplot.png}
 	\end{center}
 \end{figure}
@@ -1103,7 +1101,7 @@ When considering the responses to the Likert-type questionnaires (see figure \re
 \begin{figure}[h]
 	\begin{center}
 	\includegraphics[width=.6\textwidth]{2.2/9-item-likert-type-questionnaire.png}
-	\caption{Likert-type questionnaire results for stage 2.2.}
+	\caption{Stage 2.2 evaluation Likert-type questionnaire results.}
 	\label{9-item-likert-type-questionnaire.png}
 	\end{center}
 \end{figure}
