--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -14,7 +14,7 @@ Alternate realities have fascinated mankind since early prehistory and with the 
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=\textwidth]{participant-f-4.jpg}
-		\caption{The \textit{Mirrorshades} parallel reality platform in use.}
+		\caption{The \textit{Mirrorshades} parallel reality platform in use at a 15th century chapel.}
 		\label{participant-f-4.jpg}
 	\end{center}	
 \end{figure}
@@ -29,7 +29,8 @@ As listed in section \ref{intro-contributions} the contributions of this thesis 
 	\item The introduction of parallel reality as a new category of alternate reality that allows users to experience two complete environments in tandem and represents an approach for mitigation of the vacancy problem.
 	\item The framing of parallel reality through a thorough investigation and extension of previous taxonomies that classify and distinguish alternate reality terminologies.
 	\item The creation of the combined Milgram/Waterworth model for visualising alternate reality experiences, including those of parallel reality systems.
-	\item Development of a parallel reality platform, dubbed Mirrorshades, that combines new virtual reality hardware with novel indoor positioning technology.
+	\item Development of a preliminary parallel reality platform, the Virtual Time Window, through extension of the Second Life client.
+	\item Development of a second parallel reality platform, dubbed Mirrorshades, that combines new virtual reality hardware with novel indoor positioning technology.
 	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of cultural heritage, including the application of an established presence questionnaire to parallel reality.
 	\item Discussion and creation of a set of best practices for future parallel reality endeavours.
 \end{itemize}
